# agentguard

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
agentguard/: __init__.py  _embed.py  aggregate.py  cli.py  guard.py  hook.py  mcp_server.py  memory.py  multi.py  policy.py  replay.py  scenarios.py  serve.py  telemetry.py  train.py
agentguard/adapters/: __init__.py  langchain.py  langgraph.py  raw.py
agentguard/data/: risk_model.pkl
agentguard/predictors/: __init__.py  base.py  budget_drift.py  goal_drift.py  grounding_gap.py  injection.py  loop.py  model.py  retrieval_drift.py  semantic_drift.py  tool_cascade.py
benchmarks/: RESULTS.md  swe_agent_bench.py
examples/: failing_agent_demo.py  langchain_demo.py  multiagent_demo.py  rag_failing_demo.py
tests/: test_hook_and_mcp.py  test_injection.py  test_langchain_adapter.py  test_model.py  test_multi.py  test_policy.py  test_predictors.py  test_rag_predictors.py  test_replay.py  test_semantic_and_memory.py  test_serve.py
