[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentguard"
version = "0.1.0"
description = "Predict LLM-agent-run failures in real time — and intervene before the tokens are spent"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [{ name = "Prakhar Tripathi" }]
keywords = [
    "llm", "agents", "observability", "failure-prediction",
    "langchain", "llmops", "monitoring",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries",
    "Topic :: System :: Monitoring",
]
# the core is dependency-free by design: deterministic predictors +
# heuristic fusion run anywhere Python runs
dependencies = []

[project.optional-dependencies]
langchain = ["langchain-core>=0.2"]
embeddings = ["sentence-transformers>=2.2"]
memory = ["chromadb>=0.5"]
model = ["numpy>=1.24", "scikit-learn>=1.3"]
all = [
    "langchain-core>=0.2",
    "sentence-transformers>=2.2",
    "chromadb>=0.5",
    "numpy>=1.24",
    "scikit-learn>=1.3",
]

[project.urls]
Homepage = "https://github.com/Prakhar998/agentguard"
Repository = "https://github.com/Prakhar998/agentguard"

[tool.hatch.build.targets.wheel]
packages = ["agentguard"]

[tool.hatch.build.targets.wheel.force-include]
"agentguard/data/risk_model.pkl" = "agentguard/data/risk_model.pkl"
